[iOS] Add application target as dependency of xctest module target.

Previously, clicking on the "Play" button near a test in the test
navigator doesn't automatically re-build the application target, so that
tests don't test the current state of the code, but the one when it was
last compiled.

This CL fixes the problem by adding corresponding application target as
a dependency of xctest module target.

BUG=705005

Review-Url: https://codereview.chromium.org/2779833002
Cr-Commit-Position: refs/heads/master@{#460805}